@@ -1,5 +1,13 @@
 2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_impl.cpp: a bit optimization
+	* gameswf/gameswf.h,
+	* gameswf/gameswf_movie.h,
+	* gameswf/gameswf_types.cpp: removed matrix::is_valid() because
+	we uses tu_float
+
+2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf.h: a bit optimization of tu_float
 	* gameswf/gameswf_impl.cpp: added flash version 4 specific code
 
